Добавлены тесты, улучшена логика работы с абитуриентами, реализован поиск по фото и ID, настроено HTTPS

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -16,6 +16,11 @@ a {
   font-family: "Inter", sans-serif;
   background-color: $main-bg;
   color: $main-color;
+  min-height: 100vh;
+}
+
+.check {
+  background-color: white;
 }
 
 .container {
